[gd_scene load_steps=3 format=2]

[ext_resource path="res://Menus/PauseMenu.gd" type="Script" id=1]
[ext_resource path="res://Menus/MenuTheme.tres" type="Theme" id=2]

[node name="PauseMenu" type="ColorRect"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
color = Color( 0, 0, 0, 0.423529 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 112.0
margin_top = 36.0
margin_right = 208.0
margin_bottom = 144.0

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 96.0
margin_bottom = 22.0
text = "Game Paused"

[node name="Gap" type="HSeparator" parent="CenterContainer/VBoxContainer"]
margin_top = 26.0
margin_right = 96.0
margin_bottom = 30.0

[node name="ResumeButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 34.0
margin_right = 96.0
margin_bottom = 56.0
text = "Resume"

[node name="ControlsButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 60.0
margin_right = 96.0
margin_bottom = 82.0
text = "Controls"

[node name="QuitButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 86.0
margin_right = 96.0
margin_bottom = 108.0
text = "Quit"
[connection signal="pressed" from="CenterContainer/VBoxContainer/ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/ControlsButton" to="." method="_on_ControlsButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
